--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,92 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html{
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  margin: 0;
+  padding: 0;
+  background-color: #4a69bd;
+}
+
+/* Navigation Bar */
+
+.container{
+  background: #3c6382;
+  width: 100%;
+  height: 80px;
+  text-align: end;
+}
+
+.container input{
+  padding: 4px 8px;
+  border: none;
+  margin: 25px 80px;
+  background-color: transparent;
+  border-radius: 20px;
+  outline: 2px solid black;
+  color: #fff;
+}
+
+.container input:focus{
+  /* background-color: turquoise; */
+  outline: 2px solid red;
+}
+
+.container input::placeholder{
+  color: #fff;
+  font-weight: bolder;
+}
+
+/* Row Wrapper */
+
+.row-wrap{
+  width: 90%;
+  margin: 30px auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  /* text-align: center; */
+  /* position: relative; */
+}
+
+.rows{
+  width: 300px;
+  margin: 10px;
+  background-color: #3c6382;
+  overflow: hidden;
+  position: relative;
+}
+
+.rows img{
+  width: 100%;
+  object-fit: cover;
+  height: 400px;
+}
+
+.movie_title{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.movie_title h3{
+  margin: 0;
+}
+
+.movie_info{
+  padding: 0 15px;
+  background-color: #fff;
+  position: absolute;
+  /* top:0; */
+  max-height: 100%;
+  overflow: auto;
+  bottom: 0;
+  z-index: 1;
+  transform: translateY(100%);
+  transition: transform .3s ease-in-out;
+}
+
+.rows:hover .movie_info{
+  transform: translateY(0);
 }
